fixed code blog word wrap

--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -75,3 +75,7 @@ header img {
         margin: auto;
     }
 }
+
+.highlight pre{
+  white-space: pre-wrap;
+}
